...
}

@Composable
fun CurrentVacation(navController: NavController, vm: HomeViewModel = hiltViewModel()){
    val currentVacation = vm.getCurrentVacation()
    if(currentVacation != null) {
        Box(Modifier.height(300.dp).fillMaxWidth().testTag("upcomingVacation").clickable { navController.navigate(Screen.VacationScreen.route+"?id=${currentVacation._id}") }) {
            val imageModifier = Modifier
                .fillMaxSize()
                .blur(5.dp)
            CustomImage(imageModifier, currentVacation.pictureFileName, ImageSourceSelector.TRAVEL, 0.6F)
            Column(modifier = Modifier.padding(start = 20.dp)) {
                Text(
...
