...


    Scaffold(
        content = { paddingValues ->
            Box(modifier = Modifier
                .fillMaxSize()
                .padding(paddingValues).background(MaterialTheme.colorScheme.background).testTag("activityListScreen")) {
                ActivitiesList(navController)
            }
        },
        topBar = {
            val route = if(vm.participant.value) Screen.VacationScreen.route + "?id=${travelId}" else Screen.TravelProfileScreen.route + "?id=${travelId}"
            TopBar(
...
